--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="https://www.flaticon.com/svg/static/icons/svg/726/726107.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,20 +30,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Portfolio Aleksander D.</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <style id="loading screen css">
-      .container {
+</head>
+<!--    wake up heroku apps-->
+<script>
+    fetch('https://theatre-database.herokuapp.com/heroku/start', {method: 'post'}).then(() => {
+        console.log('heroku woke up');
+    });
+    fetch('https://destroy-bugs.herokuapp.com/heroku/start', {method: 'post'}).then(() => {
+        console.log('heroku woke up');
+    });
+</script>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<style id="loading screen css">
+    .container {
         color: azure;
         background-color: #424242;
         transform: scale(2);
         height: 100vh;
         width: 100vw;
         font-family: Helvetica;
-      }
+    }
 
-      .loader {
+    .loader {
         height: 20px;
         width: 250px;
         position: absolute;
@@ -52,8 +61,9 @@
         left: 0;
         right: 0;
         margin: auto;
-      }
-      .loader--dot {
+    }
+
+    .loader--dot {
         animation-name: loader;
         animation-timing-function: ease-in-out;
         animation-duration: 3s;
@@ -64,100 +74,109 @@
         background-color: black;
         position: absolute;
         border: 2px solid white;
-      }
-      .loader--dot:first-child {
+    }
+
+    .loader--dot:first-child {
         background-color: #8cc759;
         animation-delay: 0.5s;
-      }
-      .loader--dot:nth-child(2) {
+    }
+
+    .loader--dot:nth-child(2) {
         background-color: #8c6daf;
         animation-delay: 0.4s;
-      }
-      .loader--dot:nth-child(3) {
+    }
+
+    .loader--dot:nth-child(3) {
         background-color: #ef5d74;
         animation-delay: 0.3s;
-      }
-      .loader--dot:nth-child(4) {
+    }
+
+    .loader--dot:nth-child(4) {
         background-color: #f9a74b;
         animation-delay: 0.2s;
-      }
-      .loader--dot:nth-child(5) {
+    }
+
+    .loader--dot:nth-child(5) {
         background-color: #60beeb;
         animation-delay: 0.1s;
-      }
-      .loader--dot:nth-child(6) {
+    }
+
+    .loader--dot:nth-child(6) {
         background-color: #fbef5a;
         animation-delay: 0s;
-      }
-      .loader--text {
+    }
+
+    .loader--text {
         position: absolute;
         top: 200%;
         left: 0;
         right: 0;
         width: 13rem;
         margin: auto;
-      }
-      .loader--text:after {
+    }
+
+    .loader--text:after {
         content: "ReactDOM is Rendering";
         font-weight: bold;
         animation-name: loading-text;
         animation-duration: 3s;
         animation-iteration-count: infinite;
-      }
+    }
 
-      @keyframes loader {
+    @keyframes loader {
         15% {
-          transform: translateX(0);
+            transform: translateX(0);
         }
         45% {
-          transform: translateX(230px);
+            transform: translateX(230px);
         }
         65% {
-          transform: translateX(230px);
+            transform: translateX(230px);
         }
         95% {
-          transform: translateX(0);
+            transform: translateX(0);
         }
-      }
-      @keyframes loading-text {
+    }
+
+    @keyframes loading-text {
         0% {
-          content: "ReactDOM is Rendering";
+            content: "ReactDOM is Rendering";
         }
         25% {
-          content: "ReactDOM is Rendering.";
+            content: "ReactDOM is Rendering.";
         }
         50% {
-          content: "ReactDOM is Rendering..";
+            content: "ReactDOM is Rendering..";
         }
         75% {
-          content: "ReactDOM is Rendering...";
+            content: "ReactDOM is Rendering...";
         }
-      }
+    }
 
-    </style>
-    <div id="loading screen">
-      <div class='container'>
+</style>
+<div id="loading screen">
+    <div class='container'>
         <div class='loader'>
-          <div class='loader--dot'></div>
-          <div class='loader--dot'></div>
-          <div class='loader--dot'></div>
-          <div class='loader--dot'></div>
-          <div class='loader--dot'></div>
-          <div class='loader--dot'></div>
-          <div class='loader--text'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--dot'></div>
+            <div class='loader--text'></div>
         </div>
-      </div>
     </div>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</div>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
