Hot fixies before deployment

--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1>My Portfolio App</h1>
+<h1>My Portfolio</h1>
 <h2><a href="https://online-movie-database.netlify.app" target="_blank">Deployed on Netlify (click)</a></h2>
 
 <h3>This is a React App created using <code>Create React App</code> with <code>Typescript</code> template</h3>
@@ -6,12 +6,10 @@
 <ul>
     <li><h5><code>Typescript</code></h5></li>
     <li><h5><code>React Router Dom</code></h5></li>
+    <li><h5><code>React-Router-hash-link</code></h5></li>
     <li><h5><code>React Redux</code></h5></li>
-    <li><h5><code>apollo/client</code> For <code>GraphQL</code> API calls</h5></li>
     <li><h5><code>Material UI</code> Component UI library</h5></li>
-    <li><h5><code>React Toastify</code></h5></li>
-    <li><h5><code>React Animate On Scroll</code></h5></li>
-    <li><h5><code>Axios</code></h5></li>
-    <li><h5><code>lodash</code></h5></li>
-    <li><h5><code>material-table</code></h5></li>
+    <li><h5><code>pdftron/webviewer</code></h5></li>
+    <li><h5><code>react-hook-form</code></h5></li>
+    <li><h5><code>emailjs-com</code></h5></li>
 </ul>
