--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 </script>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<style id="loading screen css">
+<style id="loading-screen-css">
     .container {
         color: azure;
         background-color: #424242;
@@ -156,7 +156,7 @@
     }
 
 </style>
-<div id="loading screen">
+<div id="loading-screen">
     <div class='container'>
         <div class='loader'>
             <div class='loader--dot'></div>
